# pacquet-rs

./: .gitignore  Cargo.toml  README.md  _typos.toml  deny.toml  justfile
.cargo/: config.toml
.githooks/: pre-commit
.github/actions/binstall/: action.yml
.github/workflows/: cargo-unused.yml  ci.yml  codecov.yml  integrated-benchmark.yml  micro-benchmark.yml  release-to-npm.yml  release.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: cli_args.rs  lib.rs  state.rs
crates/cli/src/cli_args/: access.rs  add.rs  approve_builds.rs  audit.rs  bin.rs  bugs.rs  cache.rs  cat_file.rs  cat_index.rs  ci.rs  completion.rs  config.rs  create.rs  dedupe.rs  deploy.rs  deprecate.rs  dist_tag.rs  dlx.rs  docs.rs  doctor.rs  edit_cmd.rs  env.rs  exec.rs  fetch.rs  find_hash.rs  help.rs  ignored_builds.rs  import.rs  info.rs  install.rs  install_test.rs  licenses.rs  link.rs  list.rs  login.rs  logout.rs  outdated.rs  owner.rs  pack.rs  patch.rs  (+33 more)
crates/cli/tests/: _utils.rs  add.rs  bin.rs  build_commands.rs  cache.rs  ci.rs  cli_compat.rs  config.rs  dedupe.rs  dlx.rs  env.rs  exec.rs  fetch.rs  import_deploy.rs  install.rs  link.rs  list.rs  maintenance_commands.rs  outdated.rs  pack.rs  patch_commands.rs  pnpm_compatibility.rs  prune.rs  rebuild.rs  remove.rs  run.rs  store.rs  unlink.rs  update.rs  why.rs  workspace_state.rs
crates/cli/tests/snapshots/: add__should_install_all_dependencies.snap  add__should_symlink_correctly.snap  install__should_install_dependencies.snap  install__should_install_exec_files.snap  install__should_install_index_files.snap
crates/env/: Cargo.toml
crates/env/src/: lib.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/fs/: Cargo.toml
crates/fs/src/: ensure_file.rs  symlink_dir.rs
crates/list/: Cargo.toml
crates/list/src/: lib.rs  why.rs
crates/lockfile/: Cargo.toml
crates/lockfile/src/: dependency_path.rs  lib.rs  load_lockfile.rs  lockfile_file.rs  multi_project_snapshot.rs  package_snapshot.rs  package_snapshot_dependency.rs  pkg_name_suffix.rs  pkg_name_ver_peer.rs  project_snapshot.rs  resolved_dependency.rs  root_project_snapshot.rs  save_lockfile.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs
crates/npmrc/: Cargo.toml  README.md
crates/npmrc/src/: custom_deserializer.rs  lib.rs
crates/package-manager/: Cargo.toml
crates/package-manager/src/: add.rs  create_cas_files.rs  create_symlink_layout.rs  create_virtual_dir_by_snapshot.rs  create_virtual_store.rs  git_spec.rs  hoist_virtual_store.rs  install.rs  install_frozen_lockfile.rs  install_package_by_snapshot.rs  install_package_from_registry.rs  install_with_lockfile.rs  install_without_lockfile.rs  installability.rs  lib.rs  link_bins.rs  link_file.rs  link_policy.rs  lockfile_check.rs  modules_manifest.rs  patching.rs  pnp_manifest.rs  pnpmfile.rs  progress_reporter.rs  registry_metadata_cache.rs  symlink_direct_dependencies.rs  symlink_package.rs  tarball_spec.rs  workspace_packages.rs
crates/package-manager/src/snapshots/: pacquet_package_manager__install__tests__should_install_dependencies.snap
crates/package-manifest/src/: lib.rs
crates/registry/: Cargo.toml
crates/registry/src/: package.rs  package_version.rs
crates/store-dir/: Cargo.toml
crates/store-dir/src/: cas_file.rs  index_file.rs  lib.rs  project_registry.rs  prune.rs  store_dir.rs
crates/tarball/: Cargo.toml
crates/tarball/src/: lib.rs
crates/testing-utils/src/: bin.rs  fs.rs
crates/testing-utils/src/fixtures/big/: package.json  pnpm-lock.yaml
npm/pacquet/: package.json
src/: lib.rs
src/command/: args.rs
src/contracts/: constants.rs  mod.rs
src/lockfile/: lock_file_actor.rs  lockfile_structure.rs
tasks/integrated-benchmark/src/: cli_args.rs  main.rs  work_env.rs
tasks/integrated-benchmark/src/fixtures/: package.json  pnpm-lock.yaml
tasks/micro-benchmark/: Cargo.toml
tasks/micro-benchmark/src/: main.rs
tasks/registry-mock/: package.json  pnpm-lock.yaml
tasks/registry-mock/src/: kill_verdaccio.rs  main.rs  mock_instance.rs  node_registry_mock.rs  registry_anchor.rs  registry_info.rs
