[package]
name                  = "pacquet-cli"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[[bin]]
name = "pacquet"
path = "src/bin/main.rs"

[dependencies]
pacquet-executor         = { workspace = true }
pacquet-env              = { workspace = true }
pacquet-fs               = { workspace = true }
pacquet-lockfile         = { workspace = true }
pacquet-list             = { workspace = true }
pacquet-network          = { workspace = true }
pacquet-npmrc            = { workspace = true }
pacquet-package-manifest = { workspace = true }
pacquet-package-manager  = { workspace = true }
pacquet-registry         = { workspace = true }
pacquet-store-dir        = { workspace = true }
pacquet-tarball          = { workspace = true }
pacquet-diagnostics      = { workspace = true }

clap        = { workspace = true }
derive_more = { workspace = true }
futures-util = { workspace = true }
home        = { workspace = true }
miette      = { workspace = true }
pipe-trait  = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_yaml  = { workspace = true }
serde_json  = { workspace = true }
rayon       = { workspace = true }
glob        = "0.3.3"
shlex       = { workspace = true }
tempfile    = { workspace = true }

[dev-dependencies]
pacquet-testing-utils = { workspace = true }

assert_cmd        = { workspace = true }
dunce             = { workspace = true }
command-extra     = { workspace = true }
insta             = { workspace = true }
pretty_assertions = { workspace = true }
serde_json        = { workspace = true }
walkdir           = { workspace = true }
same-file         = { workspace = true }
