[package]
name = "pacquet-env"
version = "0.0.1"
publish = false
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pacquet-fs      = { workspace = true }
pacquet-network = { workspace = true }

derive_more = { workspace = true }
flate2      = { workspace = true }
home        = { workspace = true }
miette      = { workspace = true }
node-semver = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tar         = { workspace = true }
zip         = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile          = { workspace = true }
