[package]
name                  = "pacquet-list"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]
pacquet-lockfile         = { workspace = true }
pacquet-package-manifest = { workspace = true }

miette     = { workspace = true }
serde_json = { workspace = true }
glob       = "0.3.3"
