[package]
name                  = "pacquet-npmrc"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]
pacquet-store-dir = { workspace = true }

home       = { workspace = true }
pipe-trait = { workspace = true }
serde      = { workspace = true }
serde_ini  = { workspace = true }
base64     = { workspace = true }
url        = { workspace = true }
derive_more = { workspace = true }
miette     = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile          = { workspace = true }
