[package]
name                  = "pacquet-package-manager"
version               = "0.0.1"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[dependencies]
pacquet-fs               = { workspace = true }
pacquet-lockfile         = { workspace = true }
pacquet-network          = { workspace = true }
pacquet-npmrc            = { workspace = true }
pacquet-package-manifest = { workspace = true }
pacquet-registry         = { workspace = true }
pacquet-store-dir        = { workspace = true }
pacquet-tarball          = { workspace = true }

async-recursion = { workspace = true }
base64          = { workspace = true }
dashmap         = { workspace = true }
derive_more     = { workspace = true }
futures-util    = { workspace = true }
miette          = { workspace = true }
node-semver     = { workspace = true }
pipe-trait      = { workspace = true }
rayon           = { workspace = true }
reflink-copy    = { workspace = true }
serde_json      = { workspace = true }
serde_yaml      = { workspace = true }
sha2            = { workspace = true }
ssri            = { workspace = true }
tar             = { workspace = true }
tracing         = { workspace = true }
zune-inflate    = { workspace = true }

[dev-dependencies]
pacquet-store-dir     = { workspace = true }
pacquet-registry-mock = { workspace = true }
pacquet-testing-utils = { workspace = true }

node-semver       = { workspace = true }
insta             = { workspace = true }
pretty_assertions = { workspace = true }
tempfile          = { workspace = true }
tokio             = { workspace = true }
walkdir           = { workspace = true }
